--- a/recipes/jollof.html
+++ b/recipes/jollof.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Nigerian Jollof</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>Nigerian Jellof</h1>
+        <h1 class="title">Nigerian Jellof</h1>
         <img src="../images/jollof_rice.jpeg" alt="Nigerian Jellof">
         <h2>Description</h2>
         <p>
