--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Pancake Recipe</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>Nigerian Pancake Recipe</h1>
+        <h1 class="title">Nigerian Pancake Recipe</h1>
         <!-- Image of pancake-->
         <img src="../images/pancakes.jpeg"  alt="Nigerian pancakes">
 
