--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Vanilla Cake Recipe</title>
 </head>
 <body>
-    <h1>Vanilla Cake Recipe</h1>
+    <h1 class="title">Vanilla Cake Recipe</h1>
     <img src="../images/cake.jpeg" alt="vanilla cake">
     <h2>Description</h2>
     <p>
