added margins and padding

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Odin Recipe</title>
     </head>
     <body>
+        <div class="container">
         <h1>Odin Recipes</h1>
         <p>My favorite Recipes</p>
         <ul>
@@ -21,5 +22,6 @@
                 <a href="recipes/cake.html">Cake Recipe</a>
             </li>
         </ul>
+    </div>
     </body>
 </html>
